# open-serialppp

./: CMakeLists.txt  README.md
app/: Subcamada.cpp  Subcamada.h  aplicacao.cpp  aplicacao.h  application.cpp  application.h  arq.h  crc16.h  enquadramento.h  framing.cpp  framing.h  io.cpp  io.h  main.cpp  main.h  serial.h  subcamada.cpp  subcamada.h  testcrc16.cpp
libs/: crc16.h  serial.cpp
libs/serialEmulator/: Pts.cpp  serialemu
tests/: crc16.cpp
